data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_430.wast
;; Test 1: Place a series of `nop` instructions before a `br_if` condition checking the top stack value. Ensure the branch should not be taken. Verify if the control flow follows the correct path.

(assert_invalid
  (module (func $test_br_if (block (nop) (nop) (nop) (i32.const 0) (br_if 0))))
  "type mismatch"
)